--- a/src/Tests/TestExec/CMakeLists.txt
+++ b/src/Tests/TestExec/CMakeLists.txt
@@ -5,6 +5,7 @@ set (TestLIB UnitTest++)
 set (FilterLIB CombFilter)
 set (AudioLIB AudioFileIO)
 set (SndLIB sndlib)
+set (VibLIB Vibrato)
 
 ##############################################################
 ## unitTest++
@@ -57,7 +58,7 @@ if (WITH_TESTS)
     add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS} ${${APP}_SOURCES_TEST} ${${APP}_HEADERS_TEST})
 
     # link the libraries
-    target_link_libraries(${APP} ${LIB} ${TestLIB} ${FilterLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS})
+    target_link_libraries(${APP} ${LIB} ${TestLIB} ${FilterLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS} ${VibLIB})
 endif (WITH_TESTS)
 
 
