--- a/src/Tests/TestExec/CMakeLists.txt
+++ b/src/Tests/TestExec/CMakeLists.txt
@@ -7,6 +7,7 @@ set (DtwLIB Dtw)
 set (FastConvLIB FastConv)
 set (AudioLIB AudioFileIO)
 set (SndLIB sndlib)
+set (PPMLIB PPM)
 
 ##############################################################
 ## unitTest++
@@ -59,7 +60,7 @@ if (WITH_TESTS)
     add_executable(${APP} ${${APP}_SOURCES} ${${APP}_HEADERS} ${${APP}_SOURCES_TEST} ${${APP}_HEADERS_TEST})
 
     # link the libraries
-    target_link_libraries(${APP} ${LIB} ${TestLIB} ${FilterLIB} ${FastConvLIB} ${DtwLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS})
+target_link_libraries(${APP} ${LIB} ${TestLIB} ${FilterLIB} ${FastConvLIB} ${DtwLIB} ${AudioLIB} ${SndLIB} ${OS_LIBS} ${PPMLIB})
 endif (WITH_TESTS)
 
 
