--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/Dtw)
 list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/FastConv) 
 list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/Tests/TestExec)
 list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/PPM)
+list (APPEND PROJECT_DIRECTORIES ${CMAKE_SOURCE_DIR}/src/OnsetTrigger)
 
     
 # set includes
@@ -70,6 +71,8 @@ if (WITH_TESTS)
     add_test(FastConv ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec FastConv)
     add_test(RingBuff ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec RingBuff)
     add_test(RingBuff ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec PPM)
+    add_test(RingBuff ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/TestExec OnsetTrigger)
+
 
     add_cppcheck_test ()
 endif (WITH_TESTS)
